--- a/src/app/layout/footer/footer.html
+++ b/src/app/layout/footer/footer.html
@@ -15,12 +15,12 @@
 
   <div class="svgs">
     <!--    Facebook   -->
-    <div class="svg-container">
+    <div class="svg-container" (click)="openFacebook()">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640">
         <path d="M240 363.3L240 576L356 576L356 363.3L442.5 363.3L460.5 265.5L356 265.5L356 230.9C356 179.2 376.3 159.4 428.7 159.4C445 159.4 458.1 159.8 465.7 160.6L465.7 71.9C451.4 68 416.4 64 396.2 64C289.3 64 240 114.5 240 223.4L240 265.5L174 265.5L174 363.3L240 363.3z"/></svg>
     </div>
     <!--    Instagram   -->
-    <div class="svg-container">
+    <div class="svg-container" (click)="openInstagram()">
       <svg fill="#000000" width="800px" height="800px" viewBox="0 0 256 256" id="Flat" xmlns="http://www.w3.org/2000/svg">
         <path d="M160,128a32,32,0,1,1-32-32A32.03667,32.03667,0,0,1,160,128Zm68-44v88a56.06353,56.06353,0,0,1-56,56H84a56.06353,56.06353,0,0,1-56-56V84A56.06353,56.06353,0,0,1,84,28h88A56.06353,56.06353,0,0,1,228,84Zm-52,44a48,48,0,1,0-48,48A48.05436,48.05436,0,0,0,176,128Zm16-52a12,12,0,1,0-12,12A12,12,0,0,0,192,76Z"/>
       </svg>
@@ -39,6 +39,7 @@
     <div class="footer-column first-column">
       <h3 class="footer-column-title">{{ "footer.address" | translate }}</h3>
       <p class="footer-column-item">San José, Escazú, San Rafael, Avenida Escazú, Locales C122 & C123</p>
+      <p class="footer-column-item">Apartado postal 209 - 1250 código postal 10201</p>
 
       <div class="a-buttons">
         <p><a>Waze</a></p>
