Adds address-related translations
Adds translations for "P.O. Box" and "Zip Code" in both English and Spanish to enhance clarity and provide a more complete address representation.

Also, updates the meta image to a webp format for better performance.

--- a/src/app/layout/footer/footer.html
+++ b/src/app/layout/footer/footer.html
@@ -39,7 +39,8 @@
     <div class="footer-column first-column">
       <h3 class="footer-column-title">{{ "footer.address" | translate }}</h3>
       <p class="footer-column-item">San José, Escazú, San Rafael, Avenida Escazú, Locales C122 & C123</p>
-      <p class="footer-column-item">Apartado postal 209 - 1250 código postal 10201</p>
+      <p class="footer-column-item">{{ "footer.po-box" | translate }} 209-1250</p>
+      <p class="footer-column-item">{{ "footer.zip-code" | translate }} 10201</p>
 
       <div class="a-buttons">
         <p><a>Waze</a></p>
