Updates content and adds map link
Updates chef bios in the i18n files to provide more context.

Makes the map icon in the footer clickable, opening a Google Maps link.

Adjusts some minor styling issues on the home page and navigation bar.

--- a/src/app/layout/footer/footer.scss
+++ b/src/app/layout/footer/footer.scss
@@ -107,6 +107,12 @@ svg{
   text-decoration: none;
 }
 
+.footer-column-item.po-box{
+  a{
+    display: none;
+  }
+}
+
 .a-buttons{
   margin-top: 50px;
 }
