--- a/src/app/layout/navbar/navbar.scss
+++ b/src/app/layout/navbar/navbar.scss
@@ -149,7 +149,7 @@
   flex-direction: column;
   justify-content: flex-end;
   gap:64px;
-  margin-bottom: 32px;
+  margin-bottom: 120px;
   margin-left: 20px;
 }
 
@@ -162,7 +162,7 @@
 /* Responsive  */
 @media (max-width: 900px) {
   .nav {
-    padding: 20px 24px 20px 0;
+    padding: 0 24px 0 0;
   }
   .nav-inner{
     display: flex;
