Implements swipe gesture to image carousel
Adds swipe functionality to the image carousel component, allowing users to navigate through images by dragging.

Improves user experience on touch devices and provides an alternative navigation method to complement the existing autoplay.

Also, adds navigation links to Waze and Google Maps in the footer.

--- a/src/app/layout/footer/footer.html
+++ b/src/app/layout/footer/footer.html
@@ -43,8 +43,8 @@
       <p class="footer-column-item">{{ "footer.zip-code" | translate }} 10201</p>
 
       <div class="a-buttons">
-        <p><a>Waze</a></p>
-        <p><a>Google Maps</a></p>
+        <p><a (click)="openWaze()">Waze</a></p>
+        <p><a (click)="openMaps()">Google Maps</a></p>
       </div>
     </div>
     <div class="footer-column second-column">
