--- a/src/app/core/components/image-carousel/image-carousel.html
+++ b/src/app/core/components/image-carousel/image-carousel.html
@@ -1,12 +1,20 @@
 <div class="carousel"
+     [class.dragging]="dragging"
      [style.--carousel-h.vh]="height"
      [style.--carousel-margin.px]="margin"
      (mouseenter)="onMouseEnter()"
      (mouseleave)="onMouseLeave()"
+     (pointerdown)="onPointerDown($event)"
+     (pointermove)="onPointerMove($event)"
+     (pointerup)="onPointerUp($event)"
+     (pointercancel)="onPointerUp($event)"
+     (pointerleave)="onPointerUp($event)"
      aria-live="off">
 
   <!-- Pista -->
-  <div class="track" [style.transform]="'translate3d(' + (-100 * current) + '%, 0, 0)'">
+  <div class="track"
+       [class.dragging]="dragging"
+       [style.transform]="trackTransform">
     @for (img of images ?? []; track img.src; let i = $index) {
       <figure class="slide" [attr.aria-hidden]="i !== current">
         <img
