--- a/src/app/core/components/image-carousel/image-carousel.scss
+++ b/src/app/core/components/image-carousel/image-carousel.scss
@@ -4,9 +4,12 @@
   position: relative;
   overflow: hidden;
   height: calc(100vh - var(--carousel-margin));
-  border-radius: 0px;
+  border-radius: 0;
   background: #000;
+  touch-action: pan-y;
+  cursor: grab;
 }
+.carousel.dragging { cursor: grabbing; }
 
 .track {
   display: flex;
@@ -14,11 +17,13 @@
   will-change: transform;
   transition: transform 600ms ease;
 }
+.track.dragging { transition: none; }
 
 .slide {
   min-width: 100%;
   height: 100%;
   margin: 0;
+  position: relative;
 }
 
 .slide-img {
@@ -27,7 +32,6 @@
   object-fit: cover;
   display: block;
   user-select: none;
-  position: relative !important;
   -webkit-user-drag: none;
 }
 
