--- a/src/app/layout/footer/footer.scss
+++ b/src/app/layout/footer/footer.scss
@@ -285,8 +285,8 @@ button.golden{
     flex-direction: row;
     gap: 20px;
     margin: 0;
-    text-align: right;
-    justify-content: space-between;
+    text-align: center;
+    justify-content: center;
     padding: 12px 0;
 
     .privacy-terms{
