--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -147,7 +147,7 @@
     <div class="column">
       <img
         class="image section-6 chef"
-        ngSrc="/img/section6/img-12.webp"
+        ngSrc="/img/section6/chef-sergio.webp"
         width="357"
         height="405"
         [alt]="'image-alt.home.sergio'| translate"
@@ -177,7 +177,7 @@
     <div class="column">
       <img
         class="image section-6 chef"
-        ngSrc="/img/section6/img-13.webp"
+        ngSrc="/img/section6/chef-carlos.webp"
         width="357"
         height="405"
         [alt]="'image-alt.home.carlos'| translate"
