--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,11 +1,17 @@
 
-<div class="section background" navTheme="light">
+<div class="section background" navTheme="light"
+     gaView="section_view"
+     [gaParams]="{ section: 'hero', lang: currentLang }"
+     [threshold]="0.5">
   <div class="right-logo">
     <img ngSrc="img/home/logo-horizontal-rings.png" height="520" width="520" alt="Enso Logo" priority>
   </div>
 </div>
 
-<div id="about" class="section grid-section" navTheme="dark">
+<div id="about" class="section grid-section" navTheme="dark"
+     gaView="section_view"
+     [gaParams]="{ section: 'grid-shell', lang: currentLang }"
+     [threshold]="0.5">
   <div class="grid-lines" aria-hidden="true">
     <div class="line line-top"></div>
     <div class="line line-bottom"></div>
@@ -38,14 +44,19 @@
     <p class="grid-sub" [innerHTML]="'home.grid-section.body' | translate">
     </p>
 
-    <button class="golden book-button" (click)="openReserve()">
+    <button class="golden book-button" (click)="openReserve()"
+            gaClick="book_experience"
+            [gaParams]="{ location: 'grid-shell-section', lang: currentLang }">
       {{ "home.grid-section.button" | translate}}
     </button>
   </div>
 
 </div >
 
-<div class="section black-section" navTheme="light">
+<div class="section black-section" navTheme="light"
+     gaView="section_view"
+     [gaParams]="{ section: 'carousel', lang: currentLang }"
+     [threshold]="0.5">
   <div class="black-section-content">
     <div class="text">
       <h2 class="black title">{{"home.black-section.title" | translate}}</h2>
@@ -66,7 +77,9 @@
       </div>
       <div class="button-and-text">
         <p class="sub black">{{"home.black-section.body" | translate}}<br><br></p>
-        <button class="golden book-button black">
+        <button class="golden book-button black"
+                gaClick="view-menu"
+                [gaParams]="{ location: 'carousel-section', lang: currentLang }">
           {{"home.black-section.button" | translate}}
         </button>
       </div>
@@ -90,7 +103,11 @@
 
 </div>
 
-<div class="section black-section section-4" navTheme="dark">
+<div class="section black-section section-4" navTheme="dark"
+     gaView="section_view"
+     [gaParams]="{ section: 'legacy', lang: currentLang }"
+     [threshold]="0.5"
+>
   <h2 class="black title section-4--mobile">{{ "home.section-4.title" | translate }}</h2>
   <div class="header-image-container">
     <img
@@ -107,12 +124,18 @@
     <p class="sub black section-4" [innerHTML]="('home.section-4.body-1' | translate)"></p>
     <p class="sub black section-4" [innerHTML]="('home.section-4.body-2' | translate)"></p>
   </div>
-  <button class="golden section-4" (click)="go('story', false)">
+  <button class="golden section-4"
+          gaClick="our_story"
+          [gaParams]="{ location: 'legacy', lang: currentLang }"
+          (click)="go('story', false)">
     {{ "home.section-4.button" | translate }}
   </button>
 </div>
 
-<div class="section section-5" navTheme="dark">
+<div class="section section-5" navTheme="dark"
+     gaView="section_view"
+     [gaParams]="{ section: 'movement-grid', lang: currentLang }"
+     [threshold]="0.5">
   <div class="grid-lines-section-5" aria-hidden="true">
     <div class="line line-top-section-5"></div>
     <div class="line line-bottom-section-5"></div>
@@ -132,11 +155,19 @@
       >
     </div>
     <p class="grid-sub section-5" [innerHTML]="('home.section-5.body' | translate)"></p>
-    <button class="transparent section-5" (click)="openReserve()">{{'home.section-5.button' | translate}}</button>
+    <button class="transparent section-5"
+            gaClick="book_experience"
+            [gaParams]="{ location: 'movement-grid', lang: currentLang }"
+            (click)="openReserve()">
+      {{'home.section-5.button' | translate}}
+    </button>
   </div>
 </div>
 
-<div class="section black-section section-6" navTheme="light">
+<div class="section black-section section-6" navTheme="light"
+     gaView="section_view"
+     [gaParams]="{ section: 'chefs', lang: currentLang }"
+     [threshold]="0.5">
   <div class="sub-section">
     <div class="column">
       <h2 class="black title section-6 italic desktop" style="margin-bottom:55px">{{"home.section-6.title-1" | translate}}</h2>
@@ -154,7 +185,10 @@
       >
     </div>
     <h2 class="black title section-6 italic --mobile" style="max-width: 278px">{{"home.section-6.title-1" | translate}}</h2>
-    <button class="transparent black section-6 --mobile">Contact Us</button>
+    <button class="transparent black section-6 --mobile"
+            gaClick="contact_us"
+            [gaParams]="{ location: 'chefs-mobile', lang: currentLang }"
+    >Contact Us</button>
 
     <img
       class="image section-6 divider --mobile"
@@ -172,7 +206,9 @@
       <p class="sub black section-6 chef-name">Carlos Gamboa</p>
       <p class="sub black section-6 chef-title">Head Chef</p>
       <p class="sub black section-6 paragraph body">{{"home.section-6.body-2" | translate}}</p>
-      <button class="transparent black section-6 desktop" (click)="openReserve()">{{ 'home.section-6.button' | translate }}</button>
+      <button class="transparent black section-6 desktop" (click)="openReserve()"
+              gaClick="book_experience"
+              [gaParams]="{ location: 'chefs', lang: currentLang }">{{ 'home.section-6.button' | translate }}</button>
     </div>
     <div class="column">
       <img
@@ -184,12 +220,18 @@
       >
 
       <h2 class="black title section-6 italic --mobile" style="max-width: 242px" [innerHTML]="('home.section-6.title-2' | translate)"></h2>
-      <button class="transparent black section-6 --mobile">Reserve now</button>
+      <button class="transparent black section-6 --mobile"
+              gaClick="book_experience"
+              [gaParams]="{ location: 'chefs-mobile', lang: currentLang }">
+          Reserve now</button>
     </div>
   </div>
 </div>
 
-<div id="story" class="section section-7" navTheme="light">
+<div id="story" class="section section-7" navTheme="light"
+     gaView="section_view"
+     [gaParams]="{ section: 'crane', lang: currentLang }"
+     [threshold]="0.5">
   <div class="overlay container section-7">
     <h2 class="section-7 title">{{"home.section-7.title" | translate}}</h2>
     <h3 class="section-7 subtitle">{{"home.section-7.subtitle" | translate}}</h3>
@@ -208,7 +250,10 @@
       <p class="sub black section-7 body">{{"home.section-7.body-2" | translate}}</p>
     </div>
 
-    <button class="transparent black section-7" (click)="openReserve()">{{"home.section-7.button-1" | translate}}</button>
+    <button class="transparent black section-7" (click)="openReserve()"
+            gaClick="book_experience"
+            [gaParams]="{ location: 'crane-section-1', lang: currentLang }"
+    >{{"home.section-7.button-1" | translate}}</button>
     <div class="crane-container">
       <div class="crane"></div>
       <div class="section-7 crane-2 --mobile"></div>
@@ -216,13 +261,19 @@
 
     <div class="section-7 right-text">
       <h3 class="section-7 body">{{"home.section-7.body-3" | translate}}</h3>
-      <button class="golden section-7" (click)="openReserve()">{{"home.section-7.button-2" | translate}}</button>
+      <button class="golden section-7" (click)="openReserve()"
+              gaClick="book_experience"
+              [gaParams]="{ location: 'crane-section-2', lang: currentLang }"
+      >{{"home.section-7.button-2" | translate}}</button>
     </div>
 
   </div>
 </div>
 
-<div class="section section-8" navTheme="light">
+<div class="section section-8" navTheme="light"
+     gaView="section_view"
+     [gaParams]="{ section: 'circle', lang: currentLang }"
+     [threshold]="0.5">
   <div class="section-8 container">
     <div class="section-8 sub-section">
       <div class="top-subsection">
@@ -238,7 +289,10 @@
       >
       <div class="bottom-subsection">
         <p class="sub black section-8 body" [innerHTML]='("home.section-8.body" | translate)'></p>
-        <button class="golden section-8" (click)="openReserve()">{{"home.section-8.button" | translate}}</button>
+        <button class="golden section-8" (click)="openReserve()"
+                gaClick="book_experience"
+                [gaParams]="{ location: 'circle', lang: currentLang }">
+          {{"home.section-8.button" | translate}}</button>
       </div>
 
     </div>
@@ -246,8 +300,14 @@
   </div>
 </div>
 
-<div class="section section-9" navTheme="dark">
+<div class="section section-9" navTheme="dark"
+     gaView="section_view"
+     [gaParams]="{ section: 'pre-footer', lang: currentLang }"
+     [threshold]="0.5">
   <h3 class="section-9 title">{{"home.section-9.title" | translate}}</h3>
-  <button class="section-9 transparent white-border" (click)="openReserve()">{{"home.section-9.button" | translate}}</button>
+  <button class="section-9 transparent white-border" (click)="openReserve()"
+          gaClick="book_experience"
+          [gaParams]="{ location: 'pre-footer', lang: currentLang }"
+  >{{"home.section-9.button" | translate}}</button>
 </div>
 
