--- a/src/app/layout/footer/footer.html
+++ b/src/app/layout/footer/footer.html
@@ -62,7 +62,7 @@
     <div class="footer-column contact-column">
       <h3 class="footer-column-title">{{ "footer.contact" | translate }}</h3>
       <a class="footer-column-item" href="tel:+50663182593">+ (506) 6318 - 2593</a>
-      <a class="footer-column-item" href="mailto:ensorestaurante@gmail.com">{{'ensorestaurante@gmail.com'}}</a>
+      <a class="footer-column-item" href="mailto:reservas@ensorestaurante.com">{{'reservas@ensorestaurante.com'}}</a>
     </div>
     <div class="footer-column book-column">
       <h3 class="footer-column-title">{{ "footer.book-a-table" | translate }}</h3>
