--- a/src/app/layout/footer/footer.html
+++ b/src/app/layout/footer/footer.html
@@ -76,7 +76,7 @@
     <div class="footer-column address-column mobile-only">
       <h3 class="footer-column-title">{{ "footer.address" | translate }}</h3>
       <p class="footer-column-item">San José, Escazú, San Rafael, Avenida Escazú, Locales C122 & C123</p>
-      <p class="footer-column-item po-box">{{ "footer.po-box" | translate }} 209-1250</p>
+      <p class="footer-column-item po-box">{{ "footer.po-box" | translate }} 209 - 1250</p>
       <p class="footer-column-item">{{ "footer.zip-code" | translate }} 10201</p>
 
       <div class="a-buttons desktop-only">
